# collection_of_clickstream_data

./: README.md  consumer.py  start_script.sh  streamlit_app.py
docker_images/: docker-compose-zookeper-kafka-postgres.yml
kafka_venv/: pyproject.toml
