[tool.poetry]
name = "kafka-venv"
version = "0.1.0"
description = ""
authors = ["Javier Orduna Rubio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
streamlit = "^1.34.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
